tests/paczka1/fuzzy1/27984970.err
Error in line 4: aY8Nujlm S899 53,8
Error in line 15: 39NUc S899 71,1
Error in line 26: 39NUc A881 70,1
Error in line 32: pY6 A770 81,8
Error in line 38: SEaA69Ey A881 40,1
